--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </tbody>
     </table>
     <div align="right">
-      <button class="btn btn-primary">Submit</button>
+      <button class="btn btn-primary" ng-click="submit()">Submit</button>
     </div>
 </div>
 </body>
