changes from Daniel

--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
     </div>
 
     <div ng-if="user">
-        <h2>{{userId.value}}</h2> 
+        <h3>Hi {{userId.value}}! Please spend your virtual amount of 100€ on as many ideas as you like.</h3> 
         <table class="table table-striped">
             <thead>
             <tr>
                 <th>Idea</th>
-                <th>Current budget</th>
+                <!-- <th>Current budget</th> -->
                 <th>My budget</th>
             </tr>
             </thead>
             <tbody>
             <tr ng-repeat="idea in ideas">
                 <td><a target="_blank" href="{{idea.value.url}}">{{idea.value.name}}</a></td> 
-                <td>{{idea.value.invested}}</td>
+                <!-- <td>{{idea.value.invested}}</td> -->
                 <td><input class="form-control" ng-model="idea.userInvestment" onkeypress='return event.charCode >= 48 && event.charCode <= 57' ng-keyup="validate()"></td>  
             </tr>
             </tbody>
